--- a/pages/components/_user-register-form.html
+++ b/pages/components/_user-register-form.html
@@ -12,7 +12,11 @@
   </div>
   <div class="form-group form-group-icon-left"><i class="fa fa-envelope input-icon"></i>
     <label>Email</label>
+    {if ($scope.email)}
+    <input name="username" id="username" class="form-control" placeholder="{$scope.email}" value="{$scope.email}" type="text" />
+    {else}
     <input name="username" id="username" class="form-control" placeholder="e.g. johndoe@gmail.com" type="text" />
+    {/if}
       <!-- <span class="form-group form-group-icon-left help-block" style="color: red;">* If you are already subscribed, please use the same email here *</span> -->
       <span class="form-group form-group-icon-left help-block" ><b><i>* If you have just bought a subscription (basic, professional, premium or VIP), please register/ sign up with the same e-mail you used to create that subscription. If you haven't created a subscription yet, you can register for free for our free version, or buy a subscription <a style="color: orange;" target="_blank" class='fancybox-noscroll fancybox.ajax' href="https://vpatina.com/pricing-plan">here </a>.
        *</i></b></span>
@@ -40,12 +44,16 @@
 </form>
 
 <script type="text/javascript">
-    console.log("asdasdasdsad");
+    if(document.getElementById("username").value){
+      const sender_mail = document.getElementById("username").value;
+    }else{
+      const sender_mail = urlParams.get('sender_mail');
+    }
     const queryString = window.location.search;
     const urlParams = new URLSearchParams(queryString);
     const first_name = urlParams.get('first_name');
     const last_name = urlParams.get('last_name');
-    const sender_mail = urlParams.get('sender_mail');
+    //const sender_mail = urlParams.get('sender_mail');
     document.getElementById("last_name").value = "Johnny Bravo";
 
     $("#first_name").val(first_name);
