login_signup_mailtrigger_completed_afrlib

--- a/pages/components/_user-login-form.html
+++ b/pages/components/_user-login-form.html
@@ -14,6 +14,6 @@
             <input class="btn" type="submit" style="background-color:#3eb0f7; font-weight: bold; color:white" value="{'log in'|translate:'c':0}" />
             <div class='gap gap-small'></div>                      
           </form>
-<!-- <script>
+<script>
 window.location.href = "https://laravel-vpatina.dci.in/loginpage";
-</script> -->
+</script>
